--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,13 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button.scss";
 @import "components/card";
 @import "components/composition.scss";
 @import "components/feature-box";
+@import "components/form.scss";
+@import "components/story";
 
 @import "layout/header";
 @import "layout/grid";
