--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,8 +15,9 @@
 @import "components/form.scss";
 @import "components/story";
 
-@import "layout/header";
+@import "layout/footer";
 @import "layout/grid";
+@import "layout/header";
 
 @import "pages/home";
 
