--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,11 +13,13 @@
 @import "components/composition.scss";
 @import "components/feature-box";
 @import "components/form.scss";
+@import "components/popup";
 @import "components/story";
 
 @import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
 @import "pages/home";
 
